# pattern-rs

./: .gitignore  .npmignore  .tool-versions  AGENTS.md  CANONICAL-ALIGNMENT-SUMMARY.md  CLAUDE.md  Cargo.toml  DEAD-CODE-ANALYSIS.md  FEATURE-BRANCH-COMPLETE.md  LICENSE  PORTING_GUIDE.md  PROPERTY-RECORDS-WORKING.md  README.md  TODO.md  clippy.toml  package-lock.json  package.json  typedoc.json  unified-wasm-spec.md
adapters/wasm/pattern-wasm/: Cargo.toml
adapters/wasm/pattern-wasm/src/: gram.rs
adapters/wasm/pattern-wasm/typescript/: gram.d.ts
benches/: Cargo.toml  pattern_operations.rs
benches/benches/: README.md  pattern_operations.rs
benches/src/: lib.rs
crates/gram-codec/: Cargo.toml  README.md  pyproject.toml
crates/gram-codec/examples/: advanced_usage.rs  basic_usage.rs
crates/gram-codec/src/: ast.rs  error.rs  json.rs  lib.rs  python.rs  serializer.rs  standard_graph.rs  transform.rs  value.rs  wasm.rs
crates/gram-codec/src/cst/: lowering.rs  mod.rs  parser.rs  syntax_node.rs
crates/gram-codec/src/parser/: annotation.rs  combinators.rs  error.rs  mod.rs  node.rs  relationship.rs  subject.rs  types.rs  value.rs
crates/gram-codec/tests/: advanced_features_tests.rs  arrow_style_variants_tests.rs  arrow_types_tests.rs  ast_integration_tests.rs  ast_roundtrip_tests.rs  corpus_integration.rs  cst_integration.rs  edge_cases_tests.rs  interop_gram_hs_tests.rs  json_alignment_test.rs  parser_tests.rs  relationship_with_edge_identifier_tests.rs  round_trip_tests.rs  schema_validation.rs  serializer_tests.rs  value_types_tests.rs
crates/gram-codec/tests/corpus/: mod.rs  parser.rs  runner.rs  validator.rs
crates/gram-codec/tests/cst/: comment_tests.rs  error_recovery_tests.rs  lowering_tests.rs  mod.rs  parse_tests.rs
crates/pato/: Cargo.toml  README.md  build.rs
crates/pato/skill-package/: pato
crates/pato/skill-package/pato/: SKILL.md
crates/pato/src/: cli.rs  diagnostic_gram.rs  diagnostics.rs  editor.rs  extensions.rs  lib.rs  main.rs  output.rs  schema.rs  source_map.rs  topic_catalog.rs
crates/pato/src/commands/: check.rs  fmt.rs  help.rs  lint.rs  mod.rs  parse.rs  rule.rs  skill.rs
crates/pato/src/skill_install/: mod.rs  package.rs  target.rs
crates/pato/tests/: check_tests.rs  diagnostic_gram_smoke.rs  extensions_tests.rs  fmt_tests.rs  help_tests.rs  lint_tests.rs  parse_tests.rs  rule_tests.rs  skill_tests.rs
crates/pattern-core/: API-CHANGES.md  API-IMPROVEMENTS-SUMMARY.md  CHANGELOG.md  Cargo.toml  GENERIC-VALUE-FIX.md  PYTHON-DEVELOPMENT.md  README.md  TERMINOLOGY-CLEANUP-SUMMARY.md  TERMINOLOGY-CORRECTION.md  TRAVERSABLE_NOTES.md  pyproject.toml
crates/pattern-core/benches/: fold_benchmarks.rs  ord_benchmarks.rs  predicate_benchmarks.rs  query_benchmarks.rs  semigroup_benchmarks.rs
crates/pattern-core/examples/: comonad_usage.rs  standard_graph_usage.rs
crates/pattern-core/pattern_core/: __init__.py  __init__.pyi
crates/pattern-core/src/: lib.rs  pattern.rs  pattern_graph.rs  python.rs  reconcile.rs  subject.rs  wasm.rs
crates/pattern-core/src/graph/: algorithms.rs  graph_classifier.rs  graph_query.rs  graph_view.rs  mod.rs  standard.rs
crates/pattern-core/src/pattern/: comonad.rs  comonad_helpers.rs  core.rs  mod.rs  unfold.rs
crates/pattern-core/src/test_utils/: equivalence.rs  generators.rs  helpers.rs  mod.rs
crates/pattern-core/tests/: algorithms.rs  analysis.rs  analysis_balanced_tree_bug.rs  analysis_property.rs  analysis_trailing_zeros_bug.rs  comonad_laws.rs  foldable_basic.rs  foldable_collections.rs  foldable_custom.rs  foldable_integration.rs  foldable_scale.rs  functor_laws.proptest-regressions  functor_laws.rs  graph_classifier.rs  graph_query.rs  graph_view.rs  hash_basic.rs  helpers_example.rs  monoid_default.rs  monoid_identity.rs  monoid_integration.rs  ord_basic.rs  ord_collections.rs  ord_equivalence.rs  ord_extrema.rs  ord_property.rs  pattern_graph.rs  predicate_contains.rs  predicate_matches.rs  predicate_properties.rs  query_all_values.rs  query_all_values_property.rs  query_any_value.rs  query_any_value_property.rs  query_existing.rs  query_filter.rs  query_filter_property.rs  query_find_first.rs  semigroup_basic.rs  semigroup_equivalence.rs  (+15 more)
crates/pattern-core/tests/equivalence/: extracted_data.rs  pattern_structure.rs  test_data.rs
crates/pattern-core/tests/property/: equality.rs  validation.rs
crates/pattern-core/tests/python/: PHASE6-PROGRESS.md  README.md  conftest.py  fix_from_list.py  test_edge_cases.py  test_integration.py  test_operations.py  test_paramorphism.py  test_pattern.py  test_performance.py  test_standard_graph.py  test_subject.py  test_subject_combination.py  test_type_safety.py  test_validation.py
crates/pattern-core/tests/snapshot/: README.md  analysis.rs  serialization.rs  validation.rs
crates/pattern-core/tests/snapshots/: snapshot_analysis__analysis_atomic_depth_distribution.snap  snapshot_analysis__analysis_atomic_element_counts.snap  snapshot_analysis__analysis_atomic_nesting_patterns.snap  snapshot_analysis__analysis_atomic_summary.snap  snapshot_analysis__analysis_linear_nesting_patterns.snap  snapshot_analysis__analysis_linear_summary.snap  snapshot_analysis__analysis_nested_depth_distribution.snap  (+7 more)
crates/pattern-core/typescript/: consumer_sample.ts  pattern_core.d.ts  symbol_type_safety_demo.ts  symbol_type_safety_test.ts
crates/pattern-ops/: Cargo.toml
crates/pattern-wasm/: Cargo.toml
crates/pattern-wasm/src/: convert.rs  gram.rs  lib.rs  standard_graph.rs
crates/pattern-wasm/typescript/: gram.d.ts
python/relateby/: README.md  pyproject.toml
python/relateby-gram/: README.md  pyproject.toml
python/relateby-gram/relateby/: __init__.py
python/relateby-gram/relateby_build/: __init__.py
python/relateby-pattern/: README.md  pyproject.toml
python/relateby-pattern/relateby/: __init__.py
python/relateby-pattern/relateby_build/: __init__.py
python/relateby/relateby/: __init__.py
python/relateby/relateby_build/: __init__.py
python/relateby/tests/: test_gram_errors.py  test_pattern_laws.py  test_pattern_ops.py  test_public_api.py
(+691 files in other folders)
