[workspace]
members = ["crates/*", "benches"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["gram-data"]
license = "BSD-3-Clause"
description = "Rust port of gram-hs pattern data structure and graph views"
repository = "https://github.com/gram-data/gram-rs"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
proptest = { version = "1.0", features = ["wasm"] }
insta = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }
