[workspace]
members = ["crates/*", "benches"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["gram-data"]
license = "BSD-3-Clause"
description = "Rust port of gram-hs pattern data structure and graph views"
repository = "https://github.com/relateby/pattern-rs"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
proptest = "1.0"
insta = "1.0"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

# Note: Previously had `[profile.release]` with opt-level="z" and lto=true,
# but this affected ALL workspace crates (not just WASM). Removed to avoid
# performance degradation in non-WASM binaries. For WASM size optimization,
# use wasm-pack which applies appropriate settings: `wasm-pack build --release`
