[package]
name = "pattern-rs-benches"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Benchmarks for pattern-rs"

[[bench]]
name = "pattern_operations"
harness = false

[dependencies]
criterion = { workspace = true }
pattern_core = { package = "relateby-pattern", path = "../crates/pattern-core" }
gram_codec = { package = "relateby-gram", path = "../crates/gram-codec" }
