[package]
name = "gram-codec"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Bidirectional codec between Gram notation and Pattern data structures"

[dependencies]
pattern-core = { path = "../pattern-core" }
nom = "7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

# Python support
pyo3 = { version = "0.23", optional = true, features = ["extension-module"] }

[dev-dependencies]
insta.workspace = true
criterion.workspace = true
proptest = "1.0"

[features]
default = []
wasm = ["wasm-bindgen", "js-sys"]
python = ["pyo3"]

[lib]
name = "gram_codec"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "codec_benchmarks"
harness = false
required-features = []

[[example]]
name = "basic_usage"
path = "../../examples/gram-codec/basic_usage.rs"

[[example]]
name = "advanced_usage"
path = "../../examples/gram-codec/advanced_usage.rs"
