[package]
name = "relateby-gram"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Bidirectional codec between Gram notation and Pattern data structures"
readme = "README.md"
documentation = "https://docs.rs/relateby-gram"
repository = "https://github.com/relateby/pattern-rs"

[package.metadata.docs.rs]
all-features = false
features = []

[dependencies]
# Version must match workspace [workspace.package] version when publishing to crates.io.
pattern_core = { package = "relateby-pattern", path = "../pattern-core", version = "0.4.0" }
nom = "7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror.workspace = true
tree-sitter = { version = "0.25", optional = true }
tree-sitter-gram = { version = "0.3", path = "../../external/tree-sitter-gram", optional = true }

# WASM support
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

# Python support
pyo3 = { version = "0.23", optional = true, features = ["extension-module"] }
pythonize = { version = "0.23", optional = true }

[dev-dependencies]
insta.workspace = true
criterion.workspace = true
proptest = "1.0"

[features]
default = []
wasm = ["wasm-bindgen", "js-sys"]
python = ["pyo3", "pythonize"]
cst = ["dep:tree-sitter", "dep:tree-sitter-gram"]

[lib]
name = "gram_codec"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "codec_benchmarks"
harness = false
required-features = []

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "advanced_usage"
path = "examples/advanced_usage.rs"

[[example]]
name = "cst_parse"
path = "../../examples/rust/cst_parse.rs"
required-features = ["cst"]
