[package]
name = "relateby-pato"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI tooling for gram files"
repository.workspace = true
build = "build.rs"

[[bin]]
name = "pato"
path = "src/main.rs"

[lib]
name = "relateby_pato"
path = "src/lib.rs"

[dependencies]
pattern_core = { package = "relateby-pattern", path = "../pattern-core", version = "0.2.5" }
gram_codec = { package = "relateby-gram", path = "../gram-codec", version = "0.2.5", features = ["cst"] }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
strsim = { workspace = true }
