[package]
name = "pattern-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Core pattern data structures"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

# Python support
pyo3 = { version = "0.23", optional = true, features = ["extension-module"] }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[lib]
name = "pattern_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
python = ["pyo3"]

[[bench]]
name = "fold_benchmarks"
harness = false

[[bench]]
name = "semigroup_benchmarks"
harness = false

[[example]]
name = "comonad_usage"
path = "../../examples/pattern-core/comonad_usage.rs"

