[package]
name = "pattern-ops"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Pattern operations and algorithms"

[dependencies]

[dev-dependencies]
proptest = { workspace = true, features = ["wasm"] }
insta = { workspace = true }

[lib]
name = "pattern_ops"
path = "src/lib.rs"

