[package]
name = "pattern-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified WebAssembly package for Pattern and Gram notation codec"

[dependencies]
pattern_core = { package = "relateby-pattern", path = "../pattern-core", features = ["wasm"] }
gram_codec = { package = "relateby-gram", path = "../gram-codec", features = ["wasm"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
