[project]
name = "relateby-gram"
version = "0.1.0"
description = "Gram notation for relateby (relateby.gram only). Install relateby for pattern+gram."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
keywords = [
    "gram",
    "notation",
    "parser",
    "relateby",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = ["relateby-gram[dev]"]

[build-system]
requires = ["maturin>=1.0,<2.0", "tomli>=2.0; python_version<'3.11'"]
build-backend = "relateby_build"
backend-path = ["."]
