[project]
name = "relateby-pattern"
version = "0.1.0"
description = "Pattern data structures for relateby (relateby.pattern only). Install relateby for pattern+gram."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
keywords = [
    "pattern",
    "data-structure",
    "graph",
    "relateby",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
    "maturin>=1.0,<2.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
all = ["relateby-pattern[dev]"]

[build-system]
requires = ["maturin>=1.0,<2.0", "tomli>=2.0; python_version<'3.11'"]
build-backend = "relateby_build"
backend-path = ["."]
